--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "@homura/autocannon": "^4.7.0-alpha.0",
-    "@mutadev/muta-sdk": "0.2.0-alpha.1",
-    "@mutadev/service": "0.2.0-alpha.1",
+    "@mutadev/muta-sdk": "^0.2.0",
     "cli-table3": "^0.5.1",
     "commander": "^3.0.2",
     "debug": "^4.1.1",
     "graphql": "14.6",
+    "huobi-chain-sdk": "^0.5.0",
     "ora": "^4.0.2",
     "randombytes": "^2.1.0",
     "rlp": "^2.2.3",
